--- a/catalog.html
+++ b/catalog.html
@@ -102,7 +102,7 @@
                   </a>
                 </li>
                 <li class="breadcrumbs-item">
-                  <a class="breadcrumbs-link">Гостиницы</a>
+                  <a class="breadcrumbs-link" href="#">Гостиницы</a>
                 </li>
               </ul>
             </nav>
@@ -117,34 +117,37 @@
                   <legend class="catalog-filter-title">Инфраструктура:</legend>
                   <ul class="catalog-filter-list">
                     <li class="catalog-filter-item">
-                      <label class="control">
-                        <input
-                          class="control-input"
-                          type="checkbox"
-                          name="pool"
-                          checked
-                        />
+                      <input
+                        class="control-input visually-hidden"
+                        type="checkbox"
+                        name="pool"
+                        checked
+                        id="pool"
+                      />
+                      <label for="pool" class="control control-checkbox">
                         Бассейн
                       </label>
                     </li>
                     <li class="catalog-filter-item">
-                      <label class="control">
-                        <input
-                          class="control-input"
-                          type="checkbox"
-                          name="parking"
-                          checked
-                        />
+                      <input
+                        class="control-input visually-hidden"
+                        type="checkbox"
+                        name="parking"
+                        checked
+                        id="parking"
+                      />
+                      <label for="parking" class="control control-checkbox">
                         Парковка
                       </label>
                     </li>
                     <li class="catalog-filter-item">
-                      <label class="control">
-                        <input
-                          class="control-input"
-                          type="checkbox"
-                          name="wi-fi"
-                        />
+                      <input
+                        class="control-input visually-hidden"
+                        type="checkbox"
+                        name="wi-fi"
+                        id="wi-fi"
+                      />
+                      <label for="wi-fi" class="control control-checkbox">
                         Wi-Fi
                       </label>
                     </li>
@@ -157,36 +160,39 @@
                   <legend class="catalog-filter-title">Тип Жилья:</legend>
                   <ul class="catalog-filter-list">
                     <li class="catalog-filter-item">
-                      <label class="control">
-                        <input
-                          class="control-input"
-                          type="radio"
-                          name="product-group"
-                          value="hotel"
-                          checked
-                        />
+                      <input
+                        class="control-input visually-hidden"
+                        type="radio"
+                        name="product-group"
+                        value="hotel"
+                        checked
+                        id="hotel"
+                      />
+                      <label for="hotel" class="control control-radio">
                         Гостиница
                       </label>
                     </li>
                     <li class="catalog-filter-item">
-                      <label class="control">
-                        <input
-                          class="control-input"
-                          type="radio"
-                          name="product-group"
-                          value="motel"
-                        />
+                      <input
+                        class="control-input visually-hidden"
+                        type="radio"
+                        name="product-group"
+                        value="motel"
+                        id="motel"
+                      />
+                      <label for="motel" class="control control-radio">
                         Мотель
                       </label>
                     </li>
                     <li class="catalog-filter-item">
-                      <label class="control">
-                        <input
-                          class="control-input"
-                          type="radio"
-                          name="product-group"
-                          value="apartments"
-                        />
+                      <input
+                        class="control-input visually-hidden"
+                        type="radio"
+                        name="product-group"
+                        value="apartments"
+                        id="apartments"
+                      />
+                      <label for="apartments" class="control control-radio">
                         Апартаменты
                       </label>
                     </li>
@@ -196,33 +202,79 @@
               <div class="catalog-filter-price">
                 <h2 class="visually-hidden">Стоимость</h2>
                 <fieldset class="catalog-filter-group">
-                  <legend class="catalog-filter-title">Стоимость, ₽:</legend>
-                  <ul class="catalog-filter-list price-wrapper">
-                    <li class="catalog-filter-item">
-                      <input
-                        class="control-input control-input-price-min"
-                        id="control-input-min"
-                        type="text"
-                        name="min-cost"
-                        value="0"
+                  <legend class="catalog-filter-title filter-title-price">
+                    Стоимость, ₽:
+                  </legend>
+                  <div class="price-container">
+                    <ul class="catalog-filter-list price-wrapper">
+                      <li class="catalog-item-price">
+                        <input
+                          class="control-input control-input-price-min"
+                          id="control-input-min"
+                          type="text"
+                          name="min-cost"
+                          placeholder="0"
+                        />
+                        <label for="control-input-min" class="control-price"
+                          >от</label
+                        >
+                      </li>
+                      <li class="catalog-item-price">
+                        <input
+                          class="control-input control-input-price-max"
+                          id="control-input-max"
+                          type="text"
+                          name="max-cost"
+                          placeholder="9000"
+                        />
+                        <label
+                          for="control-input-max"
+                          class="control-price control-price-max"
+                          >до</label
+                        >
+                      </li>
+                    </ul>
+                    <svg
+                      class="slider-container"
+                      width="288"
+                      height="20"
+                      viewBox="0 0 288 20"
+                      fill="none"
+                      xmlns="http://www.w3.org/2000/svg"
+                    >
+                      <rect
+                        x="207"
+                        width="20"
+                        height="20"
+                        rx="5"
+                        fill="white"
                       />
-                      <label for="control-input-min" class="control-price"
-                        >от</label
-                      >
-                    </li>
-                    <li class="catalog-filter-item">
-                      <input
-                        class="control-input control-input-price-max"
-                        id="control-input-max"
-                        type="text"
-                        name="max-cost"
-                        value="9000"
+                      <line
+                        opacity="0.3"
+                        x1="0.5"
+                        y1="10"
+                        x2="287.5"
+                        y2="9.99998"
+                        stroke="white"
+                        stroke-width="4"
                       />
-                      <label for="control-input-max" class="control-price"
-                        >до</label
-                      >
-                    </li>
-                  </ul>
+                      <line
+                        x1="1"
+                        y1="10"
+                        x2="227"
+                        y2="10"
+                        stroke="white"
+                        stroke-width="4"
+                      />
+                      <rect
+                        x="0.5"
+                        width="20"
+                        height="20"
+                        rx="5"
+                        fill="white"
+                      />
+                    </svg>
+                  </div>
                 </fieldset>
               </div>
               <div class="catalog-filter-btn">
@@ -502,19 +554,19 @@
                 <li class="pagination-item pagination-current">
                   <a class="pagination-link-current">1</a>
                 </li>
-                <li class="pagination-item">
+                <li class="pagination-item blue-btn">
                   <a class="pagination-link" href="#">2</a>
                 </li>
-                <li class="pagination-item">
+                <li class="pagination-item blue-btn">
                   <a class="pagination-link" href="#">3</a>
                 </li>
-                <li class="pagination-item">
+                <li class="pagination-item blue-btn">
                   <a class="pagination-link" href="#">4</a>
                 </li>
                 <li class="pagination-item three-dots">
                   <span>...</span>
                 </li>
-                <li class="pagination-item">
+                <li class="pagination-item blue-btn">
                   <a class="pagination-link" href="#">10</a>
                 </li>
               </ul>
@@ -553,6 +605,7 @@
             <a class="button" href="#">
               <span class="visually-hidden">ВКонтакте</span>
               <svg
+                class="footer-icon"
                 width="48"
                 height="41"
                 viewBox="0 0 48 41"
@@ -572,6 +625,7 @@
             <a class="button" href="#">
               <span class="visually-hidden">Телеграм</span>
               <svg
+                class="footer-icon"
                 width="48"
                 height="41"
                 viewBox="0 0 48 41"
@@ -589,6 +643,7 @@
             <a class="button" href="#">
               <span class="visually-hidden">Ютуб</span>
               <svg
+                class="footer-icon"
                 width="48"
                 height="41"
                 viewBox="0 0 48 41"
@@ -609,13 +664,69 @@
           </a>
         </address>
         <a class="htmlacademy" href="https://htmlacademy.ru/study">
-          <img
+          <svg
             class="logo-html"
-            src="images/logo_htmlacademy.svg"
-            alt="Логотип htmlacademy"
             width="115"
             height="33"
-          />
+            viewBox="0 0 115 34"
+            xmlns="http://www.w3.org/2000/svg"
+          >
+            <path d="M0 13.2564V15.8564H2.5V13.2564H0Z" fill="black" />
+            <path
+              d="M11.6 4.85645C10 4.85645 8.8 5.55645 8 6.55645H7.9V0.356445H5.9V15.8564H7.9V10.5564C7.9 8.45645 9.2 6.95645 11.2 6.95645C13 6.95645 14.1 8.35645 14.1 10.1564V15.8564H16.1V9.75644C16.2 6.75644 14.3 4.85645 11.6 4.85645Z"
+              fill="black"
+            />
+            <path
+              d="M26.6 5.15645H21.8V1.45645H19.8V5.25645H17.9V7.25645H19.8V13.2564C19.8 14.9564 20.8 15.9564 22.5 15.9564H26.6V13.9564H22.9C22.2 13.9564 21.8 13.5564 21.8 12.8564V7.15645H26.6V5.15645Z"
+              fill="black"
+            />
+            <path
+              d="M41.1 4.95645C39.5 4.95645 38.2 5.75644 37.6 7.05645H37.5C36.9 5.85645 35.7 4.95645 34.1 4.95645C32.7 4.95645 31.6 5.75645 31 6.75645H30.9V5.15645H29V15.7564H31V10.3564C31 8.35645 32 6.85645 33.6 6.85645C35.1 6.85645 36 7.85645 36 9.45645V15.7564H38V10.1564C38 7.75645 39.4 6.85645 40.6 6.85645C42.1 6.85645 43 7.85645 43 9.45645V15.7564H45V9.25644C45.1 6.75644 43.6 4.95645 41.1 4.95645Z"
+              fill="black"
+            />
+            <path
+              d="M47.8 13.0564C47.8 14.7564 48.8 15.7564 50.6 15.7564H52.6V13.7564H50.9C50.2 13.7564 49.8 13.3564 49.8 12.6564V0.356445H47.8V13.0564Z"
+              fill="black"
+            />
+            <path
+              d="M28.9 20.0564C28 18.9564 26.7 18.2564 25 18.2564C21.9 18.2564 19.6 20.5564 19.6 23.8564C19.6 27.1564 21.9 29.4564 25 29.4564C26.8 29.4564 28 28.6564 28.8 27.5564H28.9V29.1564H30.9V18.5564H28.9V20.0564ZM25.3 27.4564C23.1 27.4564 21.7 25.8564 21.7 23.8564C21.7 21.8564 23.1 20.2564 25.3 20.2564C27.5 20.2564 28.9 21.8564 28.9 23.8564C28.9 25.7564 27.5 27.4564 25.3 27.4564Z"
+              fill="black"
+            />
+            <path
+              d="M44.2 22.3564C43.7 19.9564 41.6 18.2564 38.8 18.2564C35.4 18.2564 33.2 20.7564 33.2 23.8564C33.2 26.9564 35.4 29.4564 38.8 29.4564C41.6 29.4564 43.7 27.6564 44.2 25.2564H42.1C41.7 26.5564 40.4 27.5564 38.8 27.5564C36.6 27.5564 35.2 25.9564 35.2 23.9564C35.2 21.9564 36.6 20.3564 38.8 20.3564C40.4 20.3564 41.6 21.3564 42.1 22.5564H44.2V22.3564Z"
+              fill="black"
+            />
+            <path
+              d="M55.1 20.0564C54.2 18.9564 52.9 18.2564 51.2 18.2564C48.1 18.2564 45.8 20.5564 45.8 23.8564C45.8 27.1564 48.1 29.4564 51.2 29.4564C53 29.4564 54.2 28.6564 55 27.5564H55.1V29.1564H57.1V18.5564H55.1V20.0564ZM51.5 27.4564C49.3 27.4564 47.9 25.8564 47.9 23.8564C47.9 21.8564 49.3 20.2564 51.5 20.2564C53.7 20.2564 55.1 21.8564 55.1 23.8564C55.1 25.7564 53.6 27.4564 51.5 27.4564Z"
+              fill="black"
+            />
+            <path
+              d="M68.7 20.1564C67.8 19.0564 66.5 18.2564 64.8 18.2564C61.7 18.2564 59.4 20.5564 59.4 23.8564C59.4 27.1564 61.6 29.4564 64.8 29.4564C66.5 29.4564 67.8 28.6564 68.6 27.6564H68.7V29.1564H70.7V13.7564H68.7V20.1564ZM65.1 27.4564C62.9 27.4564 61.5 25.8564 61.5 23.8564C61.5 21.8564 62.9 20.2564 65.1 20.2564C67.3 20.2564 68.7 21.8564 68.7 23.8564C68.6 25.8564 67.2 27.4564 65.1 27.4564Z"
+              fill="black"
+            />
+            <path
+              d="M78.3 18.2564C75 18.2564 72.8 20.7564 72.8 23.8564C72.8 26.8564 74.9 29.4564 78.3 29.4564C80.8 29.4564 82.8 28.1564 83.5 25.8564H81.4C80.9 26.8564 79.8 27.4564 78.4 27.4564C76.5 27.4564 75.1 26.1564 75 24.5564H83.8C84 20.9564 81.8 18.2564 78.3 18.2564ZM78.3 20.1564C80 20.1564 81.3 21.1564 81.6 22.7564H75.1C75.4 21.2564 76.6 20.1564 78.3 20.1564Z"
+              fill="black"
+            />
+            <path
+              d="M98.2 18.2564C96.6 18.2564 95.3 19.0564 94.6 20.2564H94.5C93.9 19.0564 92.7 18.2564 91.1 18.2564C89.7 18.2564 88.6 18.9564 88 20.0564V18.5564H86.1V29.1564H88.1V23.7564C88.1 21.7564 89.1 20.3564 90.7 20.2564C92.2 20.2564 93.1 21.2564 93.1 22.8564V29.1564H95.1V23.5564C95.1 21.1564 96.5 20.2564 97.7 20.2564C99.2 20.2564 100.1 21.2564 100.1 22.8564V29.1564H102.1V22.6564C102.2 20.0564 100.7 18.2564 98.2 18.2564Z"
+              fill="black"
+            />
+            <path
+              d="M109.4 27.3564L105.8 18.4564H103.6L108.4 30.0564C108.1 30.9564 107.7 31.2564 106.7 31.2564H104.2V33.2564H106.7C108.5 33.2564 109.5 32.4564 110.2 30.6564L114.9 18.4564H112.8L109.4 27.3564Z"
+              fill="black"
+            />
+            <defs>
+              <clipPath id="clip0_119052_460">
+                <rect
+                  width="115"
+                  height="33"
+                  fill="white"
+                  transform="translate(0 0.356445)"
+                />
+              </clipPath>
+            </defs>
+          </svg>
         </a>
       </div>
     </footer>
